[package]
name = "x3dh-448"
version = "1.0.0-alpha2"
edition = "2021"
authors = ["448 ENGINEERING DEVELOPERS <superuser@448.africa>"]
license = "MPL-2.0"
description = "Extended Triple Diffie-Hellman Key Agreement Library"
readme = "README.md"
keywords = ["x3dh", "diffe-hellman", "key exchange", "signal"]
categories = ["authentication", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.1.0", default-features = false, features = [
    "borsh-derive",
    "derive",
] }
bytes = { version = "1.5.0", default-features = false }
